--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-virtualized-auto-sizer": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
