--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
+    "autotrack": "^2.4.1",
     "clipboard": "^2.0.4",
     "cogo-toast": "^1.0.4",
     "intersection-observer": "^0.5.1",
