Update spreadsheet data

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "lint": "eslint src",
-    "data": "curl 'http://gsx2json.com/api?id=14aWeKOI6M44X0ApC2WF52OVRq13Ujr4MN9T1stPfFSc&sheet=1&columns=false' > ./src/data/legislators.json"
+    "data": "npm run data:legislator && npm run data:template",
+    "data:legislator": "curl 'http://gsx2json.com/api?id=14aWeKOI6M44X0ApC2WF52OVRq13Ujr4MN9T1stPfFSc&sheet=1&columns=false' > ./src/data/legislators.json",
+    "data:template": "curl 'http://gsx2json.com/api?id=14aWeKOI6M44X0ApC2WF52OVRq13Ujr4MN9T1stPfFSc&sheet=4&columns=false' > ./src/data/messageTemplates.json"
   },
   "eslintConfig": {
     "extends": "react-app"
