--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_PATH=./src
 REACT_APP_FB_ID=411731149364306
 REACT_APP_GA_ID=UA-98468513-9
+REACT_APP_ROLLBAR_TOKEN=64950189f1e74cf8bbfd7112cbd53268
