--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autotrack": "^2.4.1",
     "clipboard": "^2.0.4",
     "cogo-toast": "^1.0.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "intersection-observer": "^0.5.1",
     "normalize.css": "^8.0.1",
     "react": "^16.8.2",
